--- a/nft-game/src/css/style.css
+++ b/nft-game/src/css/style.css
@@ -23,3 +23,36 @@
         background-position: -192px;
     }
 }
+
+
+.borderanimation {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.borderanimation::before{
+    content: "";
+    background-image: conic-gradient(
+        #ffae00 10deg,
+        transparent 150deg
+    );
+    width: 150%;
+    height: 150%;
+    z-index: -50;
+    position: absolute;
+    animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(-360deg);
+    }
+}
